--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,24 @@
   .searchbar input::-webkit-search-cancel-button {
     -webkit-appearance: none;
   }
+
+  h1 {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 42px;
+    text-transform: capitalize;
+    color: #1e1e1e;
+  }
+
+  p {
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 185%;
+    color: #1e1e1e;
+    opacity: 0.8;
+    padding: 14px 0;
+  }
 }
 
 .container {
@@ -50,7 +68,6 @@ body {
 /* Home Section */
 
 #home {
-  background-image: url('background.png');
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -200,11 +217,12 @@ nav .submenu {
     text-align: center;
     color: #fff;
     opacity: 0.8;
+    padding: 14px 0 0;
   }
 }
 
 .searchbar {
-  margin: 45px auto;
+  margin: 40px auto;
   align-items: center;
   position: relative;
   border: 0.86px solid rgba(255, 255, 255, 0.6);
@@ -274,7 +292,7 @@ nav .submenu {
 
 .FAQ.flex.container {
   margin-top: 80px;
-  margin-bottom: 50px;
+  margin-bottom: 60px;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -307,7 +325,6 @@ nav .submenu {
     opacity: 0.8;
     padding: 14px 0;
   }
-
 }
 
 .info-btn {
@@ -324,6 +341,359 @@ nav .submenu {
   padding: 8px 16px;
   border-radius: 6px;
   text-align: center;
+}
+
+/* Product Section */
+
+.Product {
+  background: #f7f7f7;
+  padding: 50px 100px;
+  margin-top: 90px;
+  margin-bottom: 50px;
+
+  .bar {
+    background: #eee;
+    border-radius: 44px;
+    padding: 6px;
+    width: 348px;
+    height: 57px;
+    margin: 21px auto 80px;
+
+    ul {
+      text-align: center;
+      align-items: center;
+      flex-wrap: nowrap;
+    }
+  }
+
+  .bar li {
+    border-radius: 32px;
+    padding: 4px;
+    width: 84px;
+    height: 45px;
+    margin: 0 2.5px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+    a {
+      text-align: center;
+      opacity: 0.8;
+      font-family: var(--font-family);
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 185%;
+      color: #1e1e1e;
+    }
+  }
+}
+
+.bar li:first-child {
+  background: #fff;
+}
+
+.flex.item {
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.itemcard {
+  border-radius: 20px;
+  width: 269px;
+  max-height: fit-content;
+  margin: 10px 0 10px;
+}
+
+.itemtext {
+  background: #fff;
+  border-radius: 0 0 20px 20px;
+  padding: 18px 22px;
+
+  h2 {
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 16px;
+    color: #8d8d8d;
+  }
+
+  h1 {
+    font-family: var(--second-family);
+    font-weight: 600;
+    font-size: 21px;
+    text-transform: capitalize;
+    color: #0d1b39;
+    margin: 7px 0 10px;
+  }
+
+  .reviewstar i {
+    color: #f6b76f;
+    margin: 0 3px;
+  }
+
+  .reviewstar i:first-child {
+    margin: 0 3px 0 0;
+  }
+
+  .reviewstar i:last-child {
+    margin: 0 0 0 3px;
+  }
+
+  .price {
+    margin: 45px 0 0;
+    justify-content: space-between;
+    align-items: center;
+
+    i {
+      color: #fff;
+    }
+
+    .add-icon {
+      margin: 10px 0;
+      background: #0d1b39;
+      border-radius: 31px;
+      padding: 12px;
+      width: 48px;
+      height: 48px;
+      text-align: center;
+      display: inline-block;
+    }
+  }
+
+  h4 {
+    font-family: var(--second-family);
+    font-weight: 600;
+    font-size: 21px;
+    color: #0d1b39;
+    display: inline-block;
+  }
+}
+
+.itemimg {
+  width: 269px;
+  height: 290px;
+  margin: 0;
+  padding: 0;
+}
+
+/* Experience Section */
+
+.experience.container {
+  padding: 140px 0;
+}
+
+.h.heading {
+  margin: 0 50px 100px;
+
+  h2 {
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 18px;
+    letter-spacing: 0.17em;
+    text-transform: uppercase;
+    color: #e58411;
+    padding: 0 0 15px;
+  }
+
+  p {
+    padding: 21px 0 24px;
+  }
+}
+
+.experience .img {
+  margin: 0 auto 0 0;
+}
+
+.material .heading {
+  margin: 0 50px 100px;
+}
+
+.material .img {
+  margin: 0 0 0 auto;
+}
+
+/* Testimonial Section */
+
+.testimonial.container {
+  margin: 120px auto;
+}
+
+.testimonial .box2 {
+  margin: 0 39px;
+}
+
+.testimonial .review {
+  width: fit-content;
+  height: fit-content;
+  margin: 219px auto 48px;
+}
+
+.testimonial .card {
+  svg {
+    fill: #fff;
+  }
+
+  .review {
+    position: relative;
+    width: fit-content;
+    height: 240px;
+  }
+
+  .review-img {
+    width: 76px;
+    height: 77px;
+    position: absolute;
+    top: 0;
+    right: 129px;
+    left: 129px;
+    z-index: 10;
+  }
+
+  .review-text {
+    position: absolute;
+    top: 71px;
+    right: 41px;
+    left: 41px;
+    z-index: 9;
+
+    h1 {
+      font-family: var(--font-family);
+      font-weight: 700;
+      font-size: 18px;
+      text-transform: capitalize;
+      text-align: center;
+      color: #1e1e1e;
+    }
+
+    h3 {
+      opacity: 0.6;
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 12px;
+      text-align: center;
+      color: #1e1e1e;
+    }
+
+    p {
+      opacity: 0.8;
+      font-family: var(--font-family);
+      font-weight: 400;
+      font-size: 14px;
+      line-height: normal;
+      text-align: center;
+      color: #1e1e1e;
+      padding: 0;
+      margin: 0;
+    }
+  }
+}
+
+.review-text .reviewstar i {
+  color: #f6973f;
+  margin: 0 3px;
+}
+
+.review-text .reviewstar i:first-child {
+  margin: 0 3px 0 0;
+}
+
+.review-text .reviewstar i:last-child {
+  margin: 0 0 0 3px;
+  opacity: 0.3;
+}
+
+/* Footer */
+
+footer.container {
+  margin: 120px auto 0;
+  padding: 118px 188px 56px;
+  background-color: #f7f7f7;
+}
+
+.brand {
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+}
+
+.brand-info {
+  h1 {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 28px;
+    letter-spacing: 0.01em;
+    text-transform: capitalize;
+    color: #1e1e1e;
+  }
+
+  p {
+    opacity: 1;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 160%;
+    color: #1e1e1e;
+  }
+}
+
+.footcolum li,
+.footcolum li a {
+  text-align: justify;
+  font-family: var(--font-family);
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 160%;
+  color: #1e1e1e;
+}
+
+.footcolum li:first-child {
+  font-family: var(--third-family);
+  font-weight: 400;
+  font-size: 17px;
+  letter-spacing: -0.01em;
+  color: #f6973f;
+  padding: 0 0 20px;
+}
+
+.footcolum li:nth-last-child(2) {
+  margin: 16px 0;
+}
+
+.footcolum li i {
+  margin: 0 10px 0 0;
+}
+
+.copyright {
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  margin: 118px 0 0;
+
+  h4 {
+    opacity: 0.5;
+    font-family: var(--third-family);
+    font-weight: 400;
+    font-size: 15px;
+    letter-spacing: -0.01em;
+    color: #1e2833;
+  }
+
+  p,
+  a {
+    padding: 0;
+    margin: 0;
+    font-family: var(--font-family);
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 160%;
+    color: #1e1e1e;
+    opacity: 0.8;
+  }
+}
+
+.copyright p span {
+  margin: 0 0 0 24px;
 }
 
 /* Copyright © Mahmudul Abedin
